@@ -1,3 +1,7 @@
+added a TestAddress to the NetworkConnection object.  this way you can
+check to see whether or not the connection is up, instead of having to
+manually set it.
+
 fixed pooka so that the default image and text viewers that come with
 javamail will actually work when you double click on an attachment.
 
